<resources>
    <string name="app_name">Fit Platz</string>
    <string name="app_logo">Fitstick</string>

    <!-- Strings related to login -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Do not have an account yet? Sign up.</string>
    <string name="action_lost_login_credentials_1">Forgot your login credentials?</string>
    <string name="action_lost_login_credentials_2">Sign in here.</string>
    <string name="hint_or">OR</string>

    <!-- Strings related to the landing page -->
    <string name="hint_passport">PasSport</string>
    <string name="hint_offline_exercises">Offline Exercises</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

</resources>
