<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    tools:context="com.example.jai.login_screens.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_logo"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_username"
            android:textSize="14sp"
            android:background="@drawable/login_edit_text_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:textSize="14sp"
            android:background="@drawable/login_edit_text_background" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        android:background="@drawable/login_button_border" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:text="@string/action_lost_login_credentials_1"
            android:textColor="@color/tile_white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_lost_login_credentials_2"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:background="#4dffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_or"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:background="#4dffffff" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
