<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    tools:context="com.example.jai.login_screens.LoginActivity">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_logo"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/passport_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/hint_passport"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"
            android:background="@drawable/login_button_border" />

        <Button
            android:id="@+id/offline_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/hint_offline_exercises"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"
            android:background="@drawable/login_button_border" />

    </LinearLayout>

</LinearLayout>
